--- a/src/css/home.css
+++ b/src/css/home.css
@@ -22,6 +22,7 @@ a {
   align-items: center;
   color: #505050;
   display: flex;
+  flex-direction: column;
   font-family: 'PT Sans', sans-serif;
   height: 100%;
   justify-content: center;
@@ -44,7 +45,11 @@ a {
 }
 
 #subtitle {
+  align-items: center;
+  display: flex;
+  opacity: 0.7;
   text-align: center;
+  transform: scale(0.8);
   transition: opacity 1s linear 1s, transform 1s cubic-bezier(.4,0,.2,1) 0.75s;
 }
 
